--- a/template/index.html
+++ b/template/index.html
@@ -9,10 +9,10 @@
 
     <title>Moon</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata|Muli" rel="stylesheet">
-
     <link rel='shortcut icon' href='./img/logo.png'/>
 
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+    <link href="./fonts/fonts.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/lib/wing.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
@@ -43,7 +43,7 @@
             <img src="./img/logo.png" id="logo"/>
             <h1 class="head">Moon</h1>
             <h3>A minimal, blazing fast user interface library.</h3>
-            <a class="btn cta" href="./docs/installation.html">Get Started</a>
+            <a class="cta" href="./docs/installation.html">Get Started</a>
           </div>
         </div>
       </section>
@@ -52,18 +52,18 @@
         <div class="container">
           <div class="row">
             <div class="col-4">
-              <h3 class="text-center">Lightweight</h3>
+              <h3 class="subhead text-center">Lightweight</h3>
               <p>Weighing in at 5kb minified + gzipped, Moon is one of the lightest libraries out there.</p>
             </div>
 
             <div class="col-4">
-              <h3 class="text-center">Fast</h3>
+              <h3 class="subhead text-center">Fast</h3>
               <p>Moon uses a fast Virtual DOM, and can rerender the DOM efficiently, only updating nodes where changes were made.</p>
             </div>
 
             <div class="col-4">
-              <h3 class="text-center">Intuitive</h3>
-              <p>Moon's simple API makes it easy to learn, you can get going in no time, just include the script!</p>
+              <h3 class="subhead text-center">Intuitive</h3>
+              <p>Moon's simple API makes it easy to learn, you can get going in no time, just include a script.</p>
             </div>
           </div>
         </div>
