--- a/css/post.css
+++ b/css/post.css
@@ -5,7 +5,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   color: #4a4848;
-  font-family: "Muli", -apple-system, BlinkMacSystemFont, Avenir, "Avenir Next", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Avenir, "Avenir Next", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
 
 p {
@@ -88,7 +88,7 @@ pre code::after {
 }
 
 code {
-  font-family: "Inconsolata";
+  font-family: "Inconsolata", monospace;
 }
 
 .string {
@@ -206,16 +206,14 @@ body.close .post {
     transform: translateX(-300px);
     box-shadow: 2px 3px 40px #a8a8a8;
   }
+
   .post {
     left: 0;
   }
+
   body.close .sidebar {
     background: #f5f5f5;
     transform: translateX(0px);
-  }
-
-  body.close .post {
-    /*left: 300px;*/
   }
 }
 
