--- a/template/index.html
+++ b/template/index.html
@@ -9,10 +9,11 @@
 
     <title>Moon</title>
 
-    <link rel='shortcut icon' href='./img/logo.png'/>
+    <link rel="shortcut icon" href="./img/favicon.png"/>
 
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
     <link href="./fonts/fonts.css" rel="stylesheet">
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/lib/wing.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
