--- a/template/post.html
+++ b/template/post.html
@@ -54,6 +54,7 @@
         <a href="./compiler.html"<% if(file === "compiler.html") { %> class="sidebar-link-active"<% } %>>Compiler</a>
         <a href="./templates.html"<% if(file === "templates.html") { %> class="sidebar-link-active"<% } %>>Templates</a>
         <a href="./components.html"<% if(file === "components.html") { %> class="sidebar-link-active"<% } %>>Components</a>
+        <a href="./router.html"<% if(file === "router.html") { %> class="sidebar-link-active"<% } %>>Router</a>
         <a href="./plugins.html"<% if(file === "plugins.html") { %> class="sidebar-link-active"<% } %>>Plugins</a>
         <a href="./examples.html"<% if(file === "examples.html") { %> class="sidebar-link-active"<% } %>>Examples</a>
         <% } %>
