--- a/css/post.css
+++ b/css/post.css
@@ -1,16 +1,16 @@
 body {
   background: #f5f5f5;
-  color: #4a4848;
+  color: #2e2e2e;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #4a4848;
+  color: #2e2e2e;
   letter-spacing: 1px;
   font-family: "Glacial Indifference", -apple-system, BlinkMacSystemFont, Avenir, "Avenir Next", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
 
 p, li {
-  font-weight: 200;
+  font-weight: 400;
 }
 
 .post-title {
@@ -93,7 +93,7 @@ code {
 }
 
 .sidebar-head a {
-  color: #4a4848;
+  color: #2e2e2e;
   text-decoration: none;
 }
 
