--- a/css/post.css
+++ b/css/post.css
@@ -102,7 +102,8 @@ code {
 }
 
 .sidebar-nav a {
-  color: #7f8082;
+  color: #2e2e2e;
+  letter-spacing: 0.3px;
   text-decoration: none;
   font-size: 2rem;
   display: block;
