--- a/css/styles.css
+++ b/css/styles.css
@@ -82,9 +82,9 @@ p {
 }
 
 .cta {
-  padding: 1.5rem 5rem;
-  background: #007EFF;
-  border: 3px solid #007EFF;
+  padding: 1.7rem 5rem;
+  background: #4c47f9;
+  border: none;
   border-radius: 30px;
   font-size: 1.5rem;
   letter-spacing: 1px;
@@ -94,8 +94,9 @@ p {
 }
 
 .cta:hover {
-  background: transparent;
-  color: #007EFF;
+  color: #f5f5f5;
+  background: #3f39fc;
+  padding: 1.7rem 5.3rem;
 }
 
 #logo {
