add API link (fixes #119)

--- a/template/post.html
+++ b/template/post.html
@@ -47,8 +47,8 @@
         <a href="./instance-methods.html"<% if(file === "instance-methods.html") { %> class="sidebar-link-active"<% } %>>Instance Methods</a>
         <a href="./directives.html"<% if(file === "directives.html") { %> class="sidebar-link-active"<% } %>>Directives</a>
         <% } else if(section === 'docs') { %>
-        <a href="./installation.html"<% if(file === "installation.html") { %> class="sidebar-link-active"<% } %>>Installation</a>
         <a href="./overview.html"<% if(file === "overview.html") { %> class="sidebar-link-active"<% } %>>Overview</a>
+        <a href="./installation.html"<% if(file === "installation.html") { %> class="sidebar-link-active"<% } %>>Installation</a>
         <a href="./getting-started.html"<% if(file === "getting-started.html") { %> class="sidebar-link-active"<% } %>>Getting Started</a>
         <a href="./instance.html"<% if(file === "instance.html") { %> class="sidebar-link-active"<% } %>>Instance</a>
         <a href="./compiler.html"<% if(file === "compiler.html") { %> class="sidebar-link-active"<% } %>>Compiler</a>
@@ -57,6 +57,7 @@
         <a href="./router.html"<% if(file === "router.html") { %> class="sidebar-link-active"<% } %>>Router</a>
         <a href="./plugins.html"<% if(file === "plugins.html") { %> class="sidebar-link-active"<% } %>>Plugins</a>
         <a href="./examples.html"<% if(file === "examples.html") { %> class="sidebar-link-active"<% } %>>Examples</a>
+        <a href="../api/configuration.html">API</a>
         <% } %>
       </div>
     </aside>
