update footer html

--- a/template/index.html
+++ b/template/index.html
@@ -95,17 +95,7 @@
       </div>
     </section>
 
-    <footer>
-      <a href="https://kabir.ml" id="footer-link">
-        <div id="footer-content">
-          <img src="./img/kabir.png" id="footer-logo"/>
-          <div id="footer-desc">
-            <p id="footer-madeby">Made by</p>
-            <p id="footer-name">Kabir</p>
-          </div>
-        </div>
-      </a>
-    </footer>
+    <footer><a href="https://kabir.ml" id="footer-link"><span id="footer-made">Made by</span><img src="./img/kabir.png" alt="Logo" id="footer-logo"/><span id="footer-name">Kabir</span></a></footer>
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
     <script type="text/javascript" src="./dist/moon.js"></script>
