--- a/web/css/index.css
+++ b/web/css/index.css
@@ -9,13 +9,17 @@
   letter-spacing: 1px;
 }
 
-#head a:nth-child(2) button {
+#head img {
+  height: 100px;
+}
+
+#head a:nth-child(3) button {
   background: hsl(240, 100%, 14%);
   border: 1px solid hsl(240, 100%, 20%);
   color: hsl(240, 100%, 90%);
 }
 
-#head a:nth-child(3) button {
+#head a:nth-child(4) button {
   background: #232323;
   border: 1px solid #343434;
   color: #E6E6E6;
