--- a/web/css/index.css
+++ b/web/css/index.css
@@ -21,8 +21,8 @@
 
 #head a:nth-child(3) button {
   background: hsl(245, 100%, 64%);
-  border: 1px solid hsl(245, 100%, 57%);
-  color: #E6E6E6;
+  border: 1px solid hsl(245, 100%, 64%);
+  color: #F7F7F7;
 }
 
 #head a:nth-child(4) button {
