--- a/web/css/index.css
+++ b/web/css/index.css
@@ -35,3 +35,17 @@
 	margin-top: 70px;
 	margin-bottom: 70px;
 }
+
+#feature-minimal pre:nth-of-type(2) {
+	margin: 0;
+}
+
+#example {
+	height: 100%;
+	margin-bottom: 16px;
+	background-color: #E6E6E6;
+}
+
+#example input {
+	width: 80%;
+}
