--- a/web/template/post.html
+++ b/web/template/post.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/styles.css" />
 		<link rel="stylesheet" type="text/css" href="../css/post.css" />
 
-		<script src="../dist/moon.min.js"></script>
+		<script src="../../dist/moon.min.js"></script>
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -28,12 +28,31 @@
 	</head>
 
 	<body>
+		<div id="nav" class="container">
+			<h2 id="nav-home"><a href="../">Moon</a></h2>
+
+			<div id="nav-items">
+				<a href="./doc/guide.html">Guide</a>
+				<a href="./doc/about.html">About</a>
+				<a href="./doc/examples.html">Examples</a>
+				<a href="https://github.com/kbrsh/moon">GitHub</a>
+			</div>
+		</div>
+
 		<div id="post" class="container flex">
 			<div id="side">
 				<h6>Documentation</h6>
-				{{#posts.doc}}
-				<a href="./{{file}}">{{title}}</a>
-				{{/posts.doc}}
+				{{#each posts.doc}}
+					{{#ifeq this.file file}}
+						<a id="active" href="./{{file}}">{{title}}</a>
+					{{else}}
+						<a href="./{{file}}">{{title}}</a>
+					{{/ifeq}}
+				{{/each}}
+			</div>
+			<div id="content">
+				<h1>{{title}}</h1>
+				{{{content}}}
 			</div>
 		</div>
 	</body>
