--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,10 @@ body {
 
 #head h1 {
 	font-size: 50px;
+	max-width: 700px;
 	margin-bottom: 20px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #head a {
@@ -71,4 +74,10 @@ body {
 	color: #D5D5D5;
 	background-color: #343434;
 	border-color: #676767;
+}
+
+@media screen and (max-width: 768px) {
+	#head h1 {
+		font-size: 37.009px;
+	}
 }
