--- a/css/post.css
+++ b/css/post.css
@@ -1,38 +1,49 @@
-#post {
-	justify-content: space-between;
-	margin-top: 100px;
+body {
+	text-align: center;
 }
 
-#side a {
-	display: block;
-	color: #676767;
-	text-decoration: none;
+#side, #content {
+	text-align: left;
+	vertical-align: top;
 }
 
-#side a#active {
-	color: hsl(265, 100%, 52%);
+#side {
+	width: 287.2px;
 }
 
 #content {
-	width: 70%;
-	max-width: 700px;
-	margin: 0 auto;
+	max-width: 830.1px;
+}
+
+#side p {
+	margin-left: 14px;
+	padding: 0;
+}
+
+#side a {
+	color: hsl(0, 0%, 36%);
+	border: none;
+}
+
+#side a#active {
+	color: hsl(260, 100%, 49%);
+}
+
+code {
+	padding: 4.1px;
+	margin: 0;
 }
 
 .example {
-	margin-bottom: 16px;
-	padding: 16px;
-	background-color: #E6E6E6;
+	background-color: hsl(0, 0%, 87%);
+}
+
+.example input {
+	background-color: hsl(0, 0%, 74%);
 }
 
 @media screen and (max-width: 768px) {
-	#post {
-		flex-direction: column;
-		justify-content: start;
-	}
-
-	#content {
-		width: 100%;
-		margin-top: 50px;
+	body {
+		text-align: left;
 	}
 }
