--- a/template/post.html
+++ b/template/post.html
@@ -28,30 +28,37 @@
 	</head>
 
 	<body>
-		<div id="post">
-			<div id="nav">
-				<h2 id="nav-home"><a href="../">Moon</a></h2>
+		<div id="post" class="container x-10">
+			<div class="nav">
+				<div class="nav-home">
+					<h2 class="nav-home"><a href="../">Moon</a></h2>
+				</div>
 
-				<div id="nav-items">
-					<a href="./guide.html">Guide</a>
-					<a href="./about.html">About</a>
-					<a href="./examples.html">Examples</a>
-					<a href="https://github.com/kbrsh/moon">GitHub</a>
+				<div class="nav-items">
+					<p>
+						<a href="./guide.html" class="s-1">Guide</a>
+						<a href="./about.html" class="s-1">About</a>
+						<a href="./examples.html" class="s-1">Examples</a>
+						<a href="https://github.com/kbrsh/moon" class="s-1">GitHub</a>
+					</p>
 				</div>
 			</div>
-			<div id="side">
-				<h6>Documentation</h6>
-				{{#each posts.doc}}
+			<div class="main">
+				<div class="side x-7">
+					<h6>Documentation</h6>
+					{{#each posts.doc}}
 					{{#ifeq @root.file file}}
-						<p><a id="active" href="./{{file}}">{{title}}</a></p>
+					<p><a id="active" href="./{{file}}">{{title}}</a></p>
 					{{else}}
-						<p><a href="./{{file}}">{{title}}</a></p>
+					<p><a href="./{{file}}">{{title}}</a></p>
 					{{/ifeq}}
-				{{/each}}
-			</div>
-			<div id="content">
-				<h1>{{title}}</h1>
-				{{{content}}}
+					{{/each}}
+				</div>
+				<div class="content x-9">
+					<h1>{{title}}</h1>
+					{{{content}}}
+				</div>
+				<div class="x-5"></div>
 			</div>
 		</div>
 	</body>
