--- a/template/post.html
+++ b/template/post.html
@@ -28,23 +28,21 @@
 	</head>
 
 	<body>
-		<div id="post" class="container x-10">
+		<div class="container">
 			<div class="nav">
 				<div class="nav-home">
 					<h2 class="nav-home"><a href="../">Moon</a></h2>
 				</div>
 
 				<div class="nav-items">
-					<p>
-						<a href="./guide.html" class="s-1">Guide</a>
-						<a href="./about.html" class="s-1">About</a>
-						<a href="./examples.html" class="s-1">Examples</a>
-						<a href="https://github.com/kbrsh/moon" class="s-1">GitHub</a>
-					</p>
+					<a href="./guide.html" class="s-1">Guide</a>
+					<a href="./about.html" class="s-1">About</a>
+					<a href="./examples.html" class="s-1">Examples</a>
+					<a href="https://github.com/kbrsh/moon" class="s-1">GitHub</a>
 				</div>
 			</div>
 			<div class="main">
-				<div class="side x-7">
+				<div class="side">
 					<h6>Documentation</h6>
 					{{#each posts.doc}}
 					{{#ifeq @root.file file}}
@@ -54,11 +52,10 @@
 					{{/ifeq}}
 					{{/each}}
 				</div>
-				<div class="content x-9">
+				<div class="content">
 					<h1>{{title}}</h1>
 					{{{content}}}
 				</div>
-				<div class="x-5"></div>
 			</div>
 		</div>
 	</body>
